phase 06 implemented
